@@ -28,7 +28,7 @@ All Rights Reserved.
 
 <h2>Requirements</h2>
 <p>
-The sole requirement for PRADO is PHP 5.0.4 or higher.
+The sole requirement for PRADO is PHP 5.1.0 or higher.
 Please run <a href="requirements/index.php">requirement checker</a> to obtain
 more detailed requirement information.
 </p>
