@@ -2,8 +2,7 @@ all passed							= Congratulations! Your server configuration satisfies all requ
 passed with warnings				= Your server configuration satisfies minimum requirements by PRADO. Please pay attention to the warnings listed below.
 failed								= Sorry, your server configuration does not satisfy the requirements by PRADO.
 PHP version check					= PHP version check
-PHP 5.0.4 or higher required		= PHP version 5.0.4 or higher is required by PRADO.
-PHP 5.1.0 or higher preferred		= PHP version 5.1.0 or higher is preferred by PRADO. It eliminates the error caused by recursive __get/__set calls.
+PHP 5.1.0 or higher required		= PHP version 5.1.0 or higher is required by PRADO.
 SQLite extension check				= SQLite extension check
 SQLite extension optional			= SQLite extension is optional. If it is absent, you will not be able to use TSqliteCache.
 Memcache extension check			= Memcache extension check
